# h8

./: .gitignore  AGENTS.md  CHANGELOG.md  Justfile  README.md  pyproject.toml  session.md  test_calendar.py
.beads/: beads.left.jsonl  beads.left.meta.json  issues.jsonl
.pi/todos/: 1db76e63-7afb-4dde-a093-6a317fc722f7.json  320eea00-45d3-4355-aa20-95eb9223c977.json  3aaee0a7-ed61-4685-8f19-905bace278fe.json  4bd6fbea-84a7-492b-92b4-a75409c88065.json  561259c4-7417-4e4d-9d92-b435e97ad594.json  7ab8bb33-2dcf-4997-af2b-aa63a16a9eaa.json  85343266-245d-4f66-85b1-e15667e711ed.json  bee3acc6-5694-407a-adf4-747ece6f613d.json  c475af2c-2027-4e69-a009-780c6eb4dd9d.json  fe72d182-e048-4b02-aa61-26f9a4577405.json
.trx/: ISSUES.md  issues.jsonl
.trx/crdt/: trx-bf2h.automerge  trx-ddt9.automerge  trx-ds1g.automerge  trx-fb0y.automerge  trx-s7kk.automerge  trx-wb5r.automerge  trx-ybfm.1.automerge  trx-ybfm.2.automerge  trx-ybfm.automerge
examples/: config.toml
examples/skills/microsoft-exchange-agent/: SKILL.md
examples/skills/microsoft-exchange-agent/references/: command-reference.md  natural-language-examples.md  workflows.md
h8/: Cargo.toml  README.md
h8-client/: Cargo.toml
h8-client/h8-cli/: Cargo.toml
h8-client/h8-cli/src/: main.rs
h8-client/h8-core/: Cargo.toml
h8-client/h8-core/src/: compose.rs  config.rs  db.rs  error.rs  id.rs  lib.rs  maildir.rs  paths.rs  service.rs  types.rs
h8-client/h8-tui/src/: app.rs  data.rs  main.rs
h8-client/h8-tui/src/handlers/: key_action.rs  mod.rs
h8-client/h8-tui/src/ui/: left_pane.rs  middle_pane.rs  mod.rs  overlays.rs  right_pane.rs  status_bar.rs
h8-service/h8/: __init__.py  auth.py  calendar.py  cli.py  config.py  contacts.py  dateparser.py  free.py  mail.py  people.py  resolve.py  resources.py  routing.py  rules_oof.py  schemas.py  unsubscribe.py
h8-service/h8/service/: __init__.py
h8/h8-cli/: Cargo.toml
h8/h8-cli/src/: main.rs
h8/h8-core/: Cargo.toml
h8/h8-core/src/: compose.rs  config.rs  db.rs  id.rs  lib.rs  paths.rs  service.rs  types.rs
h8/h8-tui/: Cargo.toml
h8/h8-tui/src/: app.rs  data.rs  main.rs
h8/h8-tui/src/handlers/: mod.rs
h8/h8-tui/src/ui/: left_pane.rs  middle_pane.rs  overlays.rs  right_pane.rs  status_bar.rs
h8/src/: main.rs
history/: conv.md  plan.md
logo/: h8_logo.ai
scripts/: copy_config_schema.sh  generate_word_lists.py  h8
src/h8/: auth.py  calendar.py  cli.py  config.py  contacts.py  free.py  mail.py
src/h8/service/: __init__.py
tests/: .gitignore  __init__.py  test_auth.py  test_dateparser.py  test_mail.py  test_schemas.py
