[project]
name = "h8"
version = "0.1.0"
description = "EWS CLI for calendar, mail, and contacts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "exchangelib>=5.6.0",
]

[project.scripts]
h8 = "h8.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/h8"]
