[project]
name = "h8"
version = "0.3.0"
description = "EWS CLI for calendar, mail, and contacts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "exchangelib>=5.6.0",
    "fastapi>=0.122.0",
    "nltk>=3.9.2",
    "python-dateutil>=2.9.0.post0",
    "uvicorn>=0.38.0",
    "wordfreq>=3.1.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.scripts]
h8 = "h8.cli:main"
h8-service = "h8.service:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.hatch.build.targets.wheel]
packages = ["h8-service/h8"]
