[workspace]
members = ["h8-core", "h8-cli", "h8-tui"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.95"
chrono = { version = "0.4.39", features = ["serde", "clock"] }
chrono-tz = "0.10.1"
config = { version = "0.15.18", features = ["toml"] }
dirs = "5.0.1"
hostname = "0.4"
log = "0.4.22"
rand = "0.8"
reqwest = { version = "0.12.9", features = ["blocking", "gzip", "json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
shellexpand = "3.1.0"
thiserror = "2.0"
toml = "0.8.19"
tempfile = "3.14"
