[package]
name = "h8-core"
version.workspace = true
edition.workspace = true
description = "Core library for h8 - shared types, config, and utilities"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
config.workspace = true
dirs.workspace = true
log.workspace = true
rand.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
shellexpand.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
